[RESTful Services] Fixed Data Return Type, Fixed Result Bug, and Adding FindProductByDetailID
Do:
- Change SQL query and some Data Logic
- Adding FindProductByDetailID
- Change return to JSON Object
- Fixed product_detail_id and category_id result data
- Change current product images to PNG

Next:
- Adding more data into database
- Adding more table like order, user, and other necessary table in the database
- Start to create & thinking the App design into Figma (App Designing)

--- a/Tomcat Data Source/WebContent/WEB-INF/web.xml
+++ b/Tomcat Data Source/WebContent/WEB-INF/web.xml
@@ -30,6 +30,16 @@
     <url-pattern>/product/id/*</url-pattern>
   </servlet-mapping>
   
+  <!-- Find Product By Product Detail ID -->
+  <servlet>
+    <servlet-name>FindProductByDetailID</servlet-name>
+    <servlet-class>main.RESTfulWebService.FindProductByDetailID</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>FindProductByDetailID</servlet-name>
+    <url-pattern>/product/detail_id/*</url-pattern>
+  </servlet-mapping>
+  
   <!-- Find Product By Product Name -->
   <servlet>
     <servlet-name>FindProductByName</servlet-name>
