[Android] Project Structure, Add Assets, and Add Some Layout
Do:
- Adding project structure
- Adding some fonts and image assets
- Change app icon
- Create splash and main activity
- Adding bottom navigation and main empty fragments (home, search, favorite, shopping bag, and account)
- Adding navigation in bottom navigation

Next:
- Create Welcome Screen to New User

--- a/Android Source Code/NIKE/app/src/main/AndroidManifest.xml
+++ b/Android Source Code/NIKE/app/src/main/AndroidManifest.xml
@@ -10,11 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NIKE">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.main.MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.splash.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
