[Android] Finished Welcome Page
Forget to Notice in Previous Commit:
- Adding Useful Library
- Using binding for Calling View

Do:
- Adding Welcome Page Logic and Contents

Next:
- Adding more data in RESTful service
- Create Home Page
- Create Search Page
- Create Favorite Page

--- a/Android Source Code/NIKE/app/src/main/AndroidManifest.xml
+++ b/Android Source Code/NIKE/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NIKE">
         <activity
+            android:name=".ui.welcome.WelcomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.main.MainActivity"
             android:exported="false" />
         <activity
@@ -17,6 +20,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
