[Android & RESTful Services] Add Home Design & API preparation, Adding get product by category and get all category function in RESTful service
Android:
- Create Home Fragment Design
- Add & Modify project structure (local & remote data source)
- Add API Preparation files
- Success to get men's all shoes data from service
- Show Category Chip
- Show & Hide Main Top Nav on scroll

RESTful Service:
- Add get all category function
- Add get product by category
- Change output format from JSON array to JSON object

Next:
- Add Category Chip Listener & logic
- Remove open-close string console in backend
- limit collection results
- show collection based on selected chip
- add show all button

--- a/Android Source Code/NIKE/app/build.gradle
+++ b/Android Source Code/NIKE/app/build.gradle
@@ -45,17 +45,20 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     implementation "com.github.bumptech.glide:glide:4.12.0"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.30"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.6.0"
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation 'com.github.vipulasri:timelineview:1.1.5'
     implementation 'com.faltenreich:skeletonlayout:4.0.0'
-    implementation "androidx.paging:paging-runtime-ktx:3.1.0"
+    implementation "androidx.paging:paging-runtime-ktx:2.1.2"
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //retrofit & other remote comp.
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
 
     //Room
     implementation "androidx.room:room-ktx:2.3.0"
