[Android & RESTful Services] Update Android & RESTful service
Android:
- get product by category & type

RESTful Service:
- limit collection results
- Add find product by category id and type name
- Add get type by ID and name

Next:
- Add show more button
- Add latest logic in android
- Add Show all result

--- a/Tomcat Data Source/WebContent/WEB-INF/web.xml
+++ b/Tomcat Data Source/WebContent/WEB-INF/web.xml
@@ -60,6 +60,16 @@
     <url-pattern>/product/category_id/*</url-pattern>
   </servlet-mapping>
   
+  <!-- Find Product By Category ID & Type Name -->
+  <servlet>
+    <servlet-name>FindProductByCategoryAndType</servlet-name>
+    <servlet-class>main.RESTfulWebService.FindProductByCategoryAndType</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>FindProductByCategoryAndType</servlet-name>
+    <url-pattern>/product/category_type</url-pattern>
+  </servlet-mapping>
+  
   <!-- Find All Category -->
   <servlet>
     <servlet-name>FindAllCategories</servlet-name>
