[Android] Update Android
Do:
- Create See All product Page
- Create some component in product Detail page (bottom sheet, slideshow, etc.)

Next:
- Fixed get data for product detail (not using group by/ can try call again from API)
- Continue add detail layout & connect data to UI
- Favorite button Logic in Detail Page
- Add Add/Remove Product to cart Logic
- Create shopping cart page

--- a/Android Source Code/NIKE/app/src/main/AndroidManifest.xml
+++ b/Android Source Code/NIKE/app/src/main/AndroidManifest.xml
@@ -10,8 +10,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.NIKE">
+        android:theme="@style/Theme.NIKE"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".ui.detailProduct.DetailProductActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.seeAllProduct.SeeAllProductActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.welcome.WelcomeActivity"
             android:exported="false" />
