[Android & RESTful Services] Update Android & Backend Service
Android:
- Add more content in detail product
- Add change product data by choose color
- Add Image View in Detail
- Connect Set/Remove Product from Favorite

RESTful Service:
- Change data get logic by modify the group by

Next:
- Add more content in Detail page
- Add Add-Remove Product Logic
- Add shopping bag database

--- a/Android Source Code/NIKE/app/src/main/AndroidManifest.xml
+++ b/Android Source Code/NIKE/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.NIKE"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ui.detailProduct.imagePreview.ImageViewActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.detailProduct.DetailProductActivity"
             android:exported="false" />
         <activity
