--- a/Android Source Code/NIKE/app/build.gradle
+++ b/Android Source Code/NIKE/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.faltenreich:skeletonlayout:4.0.0'
     implementation "androidx.paging:paging-runtime-ktx:2.1.2"
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.github.chrisbanes:PhotoView:2.1.4'
 
     //retrofit & other remote comp.
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
