[Android] Update Android
Do:
- Add Setting page
- Add about page
- Finish load data in Details
- Add Add-Remove Field Listener

Next:
- Create order database in backend
- Create shopping cart database in Android

--- a/Android Source Code/NIKE/app/src/main/AndroidManifest.xml
+++ b/Android Source Code/NIKE/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.NIKE"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ui.about.AboutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.setting.SettingActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.detailProduct.imagePreview.ImageViewActivity"
             android:exported="false" />
         <activity
