[Android & RESTful Services] Update Android & Backend Service
Android:
- Add Sign Up & Login logic-connection
- Show user data in the user account page
- Show user address in checkout page if the user already login

RESTful service:
- Add Some function backend like insert user, update login information, update user data, and delete user

Next:
- Add checkout product to transaction database

--- a/Tomcat Data Source/WebContent/WEB-INF/web.xml
+++ b/Tomcat Data Source/WebContent/WEB-INF/web.xml
@@ -79,4 +79,14 @@
     <servlet-name>FindAllCategories</servlet-name>
     <url-pattern>/category</url-pattern>
   </servlet-mapping>
+  
+  <!-- Find User by Email -->
+  <servlet>
+    <servlet-name>FindUserData</servlet-name>
+    <servlet-class>main.RESTfulWebService.FindUserData</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>FindUserData</servlet-name>
+    <url-pattern>/user/email/*</url-pattern>
+  </servlet-mapping>
 </web-app>
