[Android & RESTful Services] Update Android & Backend Service
- Add Edit and Delete user Account

Next:
- Input checkout data into database

--- a/Android Source Code/NIKE/app/src/main/AndroidManifest.xml
+++ b/Android Source Code/NIKE/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.NIKE"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ui.userEdit.UserEditActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.about.AboutActivity"
             android:exported="false" />
         <activity
