--- a/Android Source Code/NIKE/app/src/main/AndroidManifest.xml
+++ b/Android Source Code/NIKE/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.NIKE"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ui.transactionHistory.TransactionHistoryActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.userEdit.UserEditActivity"
             android:exported="false" />
         <activity
